--- a/Basic project/Makefile
+++ b/Basic project/Makefile
@@ -1,3 +1,13 @@
-make:
+main:
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c main.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c GUI.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c player.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozengine  main.ozf
+
+test:
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c ish.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozengine  ish.ozf
+
+
+
+#To make the whole project working, first compile the Input.oz file, PlayerManager.oz file, players files,GUI.oz and Main.oz. Then execute the created functor file Main.ozf.
