--- a/Basic project/Makefile
+++ b/Basic project/Makefile
@@ -1,11 +1,17 @@
-main:
+make:
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c input.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c playerManager.oz
-	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c player.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c player1.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c player2.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c GUI.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c main.oz
 
 	/Applications/Mozart2.app/Contents/Resources/bin/ozengine  main.ozf
+
+main:
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c main.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozengine  main.ozf
+
 
 test:
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c ish.oz
