--- a/Basic project/Makefile
+++ b/Basic project/Makefile
@@ -1,6 +1,7 @@
 make:
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c input.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c playerManager.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c player.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c GUI.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c main.oz
 
@@ -21,8 +22,10 @@ gui:
 	/Applications/Mozart2.app/Contents/Resources/bin/ozengine  main.ozf
 
 player:
-	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c Player1.oz
-
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c Player.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c main.oz
+	
+	/Applications/Mozart2.app/Contents/Resources/bin/ozengine  main.ozf
 
 
 #To make the whole project working, first compile the Input.oz file, PlayerManager.oz file, players files,GUI.oz and Main.oz. Then execute the created functor file Main.ozf.
