--- a/Basic project/Makefile
+++ b/Basic project/Makefile
@@ -1,7 +1,7 @@
 make:
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c input.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c playerManager.oz
-	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c player.oz
+	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c Player.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c GUI.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c main.oz
 
@@ -24,7 +24,7 @@ gui:
 player:
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c Player.oz
 	/Applications/Mozart2.app/Contents/Resources/bin/ozc -c main.oz
-	
+
 	/Applications/Mozart2.app/Contents/Resources/bin/ozengine  main.ozf
 
 
